demo-apps/redis/kustomize/overlays/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redis
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - redis.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: redis
          port: 6379
